# yllama.rs

./: Cargo.toml  LICENSE  README.md
yllama/: Cargo.toml
yllama/src/: gpt.rs  lib.rs  llama.rs  llm.rs  main.rs  model.rs
yloader/: Cargo.toml
yloader/src/: gguf.rs  gguf_file.rs  gguf_parser.rs  lib.rs
ymain/: Cargo.toml
ymain/src/: main.rs
ymath/: Cargo.toml
ymath/src/: lib.rs  tensor.rs
