[package]
name = "yloader"
edition = "2021"

[dependencies]
memmap2 = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bytes = { version = "1.5" }
nom = { version = "7", features = ["alloc"] }
anyhow = "1.0.86"
half = { version = "2.4.1", features = ["num-traits"] }

[dependencies.ymath]
path = "../ymath"
